--- a/01-html-markup/index.html
+++ b/01-html-markup/index.html
@@ -61,53 +61,53 @@ Gutenberg considered the counter space, letter space, and line space. Every para
 
 
 
-<h3>Counter Space</h3>
+<li><h3>Counter Space</h3>
 
 The counter space is the fully or partly enclosed white space inside a letter.
 
 Counter space is similar to the empty space inside a bowl or container. The empty space isn’t a physical thing like the material of the bowl itself. But the sides of the bowl cause a certain amount of space to be created inside that bowl. When you move the bowl, the space moves with it. Without that space, the bowl just wouldn’t be the same.
 
-The counter space of a letter belongs to that letter just like the empty space inside a container belongs to that container. When you move a letter, the counter space moves with it. Without the counter space, the letter just wouldn’t be the same.
+The counter space of a letter belongs to that letter just like the empty space inside a container belongs to that container. When you move a letter, the counter space moves with it. Without the counter space, the letter just wouldn’t be the same.</li>
 
 
 
-<h3>Letter Space</h3>
+<li><h3>Letter Space</h3>
 
 The letter space is the white space flanking letters on the left and right sides. In contrast to the counter space, which is interior space, letter space is exterior space.
 
 In a letter like the c, the interior counter space is only partially enclosed and it flows into the exterior letter space. In a letter like the o, the counter space is fully enclosed and is distinct from the letter space.
 
-A straight border can be imposed between each letter, splitting the white space so that a bit belongs to the letter on the left and a bit belongs to the letter on the right. These simple borders form the left and right sides of the glyph space.
+A straight border can be imposed between each letter, splitting the white space so that a bit belongs to the letter on the left and a bit belongs to the letter on the right. These simple borders form the left and right sides of the glyph space.</li>
 
 
 
-<h3>Line Space</h3>
+<li><h3>Line Space</h3>
 
 The line space is the white space above and below letters, formed between lines of text.
 
 Line space is similar to letter space but it involves vertical relationships instead of horizontal. Between two consecutive lines of text is a white puzzle piece that connects them. A straight horizon.tal border can be imposed between the lines, splitting the white space so the top half belongs to the letters on the line above and the bottom half belongs to the letters on the line below. There’s enough white space to accommodate the descenders of the line above and the ascenders in the line below. These simple borders form the top and bottom sides of the glyph space.
 
-Here’s the important result: the glyph space for every letter is the same height, regardless of the height of the actual letter.
+Here’s the important result: the glyph space for every letter is the same height, regardless of the height of the actual letter.</li>
 
 
 
-<h3>Glyph Space</h3>
+<li><h3>Glyph Space</h3>
 
 The glyph space is the shoebox of white space surrounding the letter. It’s formed by attaching the counter space, letter space and line space to the letter.
 
 You may encounter the term ‘body’ when referring to the boxes that surround each letter. In fact, you could use the terms ‘glyph space’ and ‘body’ more or less interchangeably. When discussing foundry type, ‘body’ is commonly used and refers to the actual little piece of metal. ‘Glyph space’ is helpful when discussing the space as a component within a paragraph.
 
-Thinking about white space (or negative space) is not specific to typography or even calligraphy. It’s a basic part of two dimensional design. Glyph space, however, is solely a typographic concept. It’s the mechanism that makes movable type possible. The glyph space forms a typeface’s built-in spacing, and that built-in spacing is the starting point for the structure of a paragraph.
+Thinking about white space (or negative space) is not specific to typography or even calligraphy. It’s a basic part of two dimensional design. Glyph space, however, is solely a typographic concept. It’s the mechanism that makes movable type possible. The glyph space forms a typeface’s built-in spacing, and that built-in spacing is the starting point for the structure of a paragraph.</li>
 
 
 
-<h3>Moveable Type</h3>
+<li><h3>Moveable Type</h3>
 
 Movable type mimics handwritten text but doesn’t reproduce it perfectly. Imposing this kind of strict modularity naturally comes with limits. Gutenberg (and subsequent type designers) worked to adapt calligraphic letters to function within these limits. The typographic letters that they created have evolved into their own species, ranging from geometric sans serifs to elaborate decorative scripts. Digital type has now freed type designers from some of the limits of foundry type, allowing type to evolve further still.
 
 However, the concept at the heart of movable type—the idea of glyph space—is still just as critical to how type works. Thanks to today’s software, you can set type without thinking about the concept of glyph space. However, a good understanding of it can help to make you a better typographer. When setting a paragraph, the majority of the typographer’s decisions involve ing or removing space relative to each character’s glyph space.
 
 
-Note: This is a modified, abridged version of the text. The complete, illustrated version is available Princeton Architectural Press. Translated versions are available from publishers around the world. A complete list of the different editions can be found at occupantfonts.com
+Note: This is a modified, abridged version of the text. The complete, illustrated version is available Princeton Architectural Press. Translated versions are available from publishers around the world. A complete list of the different editions can be found at occupantfonts.com</li>
 	</body>
 </html>
