--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 		<h1>Hello World!</h1>
 	</div>
 	<div class="container">
+		<a href="typographic-website/index.html">Specimen Page</a>
+	</div>
+	<div class="container">
 		<a href="01-html-markup/index.html">Semantic Markup</a>
+	</div>
+	<div class="container">
+		<a href="typographic-poster/index.html">Typographic Poster</a>
 	</div>
 </body>
 </html>
