--- a/typographic-website/index.html
+++ b/typographic-website/index.html
@@ -79,7 +79,7 @@
     
     <section class="img-box-section">
         <div class="two-colum-wrapper">
-            <div class="two-colum--item bag-ivory">
+            <div class="two-colum--item shoe-red">
              <h2 class="hover-content heading--2">RED</h2>
             </div>
             <div class="two-colum--item two-colum--box">
@@ -89,14 +89,14 @@
                         <h4>BALLET FLATS IN FISHNET</h4>
                     </div>
                     <div>
-                        <p>Small shoulder bag<br>Elongated shape<br>Tubular handles with two decorative ties<br>Double zip closure<br>Small removable mirror in the<br>inside pocket<br>Shoulder carry<br>Dimensions (cm): L 27 X H 9 X D 8<br>Made in Italy</p>
+                        <p>Squared toe ballet flats inspired by motorcycle boots<br>Double tongue buckle closure, squared toes, rubber sole<br>Soft calfskin leather<br>Made in Italy</p>
                     </div></div></div>
         </div>
         <div class="two-colum-wrapper">
-            <div class="two-colum--item bag-pink">
+            <div class="two-colum--item shoe-beige">
              <h2 class="hover-content heading--2">BEIGE</h2>
             </div>
-            <div class="two-colum--item bag-red">
+            <div class="two-colum--item shoe-ivory">
             <h2 class="hover-content heading--2">IVORY</h2>
             </div>
         </div>
