--- a/typographic-website/index.html
+++ b/typographic-website/index.html
@@ -13,7 +13,7 @@
         </section>
         
      <section class="horizontal-section">
-        <h1 class="center-alaign">CRAZY HORSE PARIS</h1>
+        <h1 class="center-align">CRAZY HORSE PARIS</h1>
          <div class="horizontal-scroll-wrapper">
              <img src="assets/EDITO-DESKTOP-1920x600-1.jpg" class="horizontal-scroll-img">
          </div>
@@ -23,7 +23,7 @@
     <section class="discover-section">
         <div class="txt-box">
             <img src="assets/body-text-background.jpg" class="txt-bg-img">
-            <p class="txt-wrapper">Maison Alaïa introduces Dialogue, a new series of artistic and cultural projects directed by Pieter Mulier. <br>A time to slow down and question the possibilities of fashion, by inviting it to dialogue with other creative forms.<br>“I have always wanted Alaïa to represent more than just clothes. And this is how Azzedine looked at Alaïa. He was such a visionary, that from the very start, he imagined Alaïa as a whole. As a space where fashion opens up to art and beauty. And this vision remains today. Because I believe that fashion only makes sense if it connects with its time. With the world,” Pieter Mulier.<br><br>Dialogue 1 takes place at the Crazy Horse Paris, the legendary Parisian cabaret that fascinates Mulier and embodies, for him, a form of art in its own right. It also holds deep significance in Azzedine Alaïa’s personal story as he created stage costumes for its dancers in 1979. Sam Rock photographed, on the Crazy Horse Paris stage, eleven of its dancers. Each one of them wears a different color of the iconic dress of Alaïa. They become the epitome of the Alaïa woman. The Teckel bags, in the same shades as the dresses, complete the looks.The row of colors tells the infinite possibilities of a garment. They give it a rhythm, a musicality. A&nbsp;movement.</p>
+            <p class="txt-wrapper">Maison Alaïa introduces Dialogue, a new series of artistic and cultural projects directed by Pieter Mulier. <br>A time to slow down and question the possibilities of fashion, by inviting it to dialogue with other creative forms.<br>“I have always wanted Alaïa to represent more than just clothes. And this is how Azzedine looked at Alaïa. He was such a visionary, that from the very start, he imagined Alaïa as a whole. As a space where fashion opens up to art and beauty. And this vision remains today. Because I believe that fashion only makes sense if it connects with its time. With the world,” Pieter Mulier.<br><br>Dialogue 1 takes place at the Crazy Horse Paris, the legendary Parisian cabaret that fascinates Mulier and embodies, for him, a form of art in its own right. It also holds deep significance in Azzedine Alaïa’s personal story as he created stage costumes for its dancers in 1979. Sam Rock photographed, on the Crazy Horse Paris stage, eleven of its dancers. Each one of them wears a different color of the iconic dress of Alaïa. They become the epitome of the Alaïa woman. The Teckel bags, in the same shades as the dresses, complete the looks.The row of colors tells the infinite possibilities of a garment. They give it<br> a rhythm, a musicality. A&nbsp;movement.</p>
         </div>
         <div class="discover-content">
             <h2>A pure beauty,<br>modern and fascinating.</h2>
